--- a/Index.html
+++ b/Index.html
@@ -111,7 +111,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://github.com/vfernandes617" target="_blank">Valter Fernandes</a></p>
+                <p class="center">&copy Valter., <a href="https://github.com/vfernandes617" target="_blank">Valter Fernandes</a></p>
                 <br>
             </p>
         </footer>
