--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="about.html">About</a>
             <a href="https://github.com/vfernandes617">GitHub</a>
             <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
+            <a href="https://docs.google.com/document/d/14c7Pohe9dIvwRvoB3WS2rZbY-Q_aPny0ikWFCeoA-jo/edit?usp=sharing">Resume</a>
         </div>
 
 
