--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>
         <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
+        <a href="https://www.linkedin.com/in/valterfernandes/">Linkedin</a>
     </div>
     <!--Insert break from nav bar-->
     <br>
