Tappy plane picture update

--- a/index.html
+++ b/index.html
@@ -1,123 +1,118 @@
 <!DOCTYPE html>
 <html>
     <!--Head-->
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width" />
-        <title>Valter Fernandes</title>
-        <link rel="stylesheet" type="text/css" href="./css/portfolio.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" />
+    <title>Valter Fernandes</title>
+    <link rel="stylesheet" type="text/css" href="./css/portfolio.css">
+</head>
 
     <!--Body -->
-    <body class="Background">
+<body class="Background">
 
-        <!--Navbar-->
-        <div class="Navbar">
-            <a class="active" href="#Home">Home</a>
-            <a href="about.html">About</a>
-            <a href="https://github.com/vfernandes617">GitHub</a>
-            <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
-            <a href="https://docs.google.com/document/d/14c7Pohe9dIvwRvoB3WS2rZbY-Q_aPny0ikWFCeoA-jo/edit?usp=sharing">Resume</a>
-        </div>
+    <!--Navbar-->
+    <div class="Navbar">
+        <a class="active" href="#Home">Home</a>
+        <a href="about.html">About</a>
+        <a href="https://github.com/vfernandes617">GitHub</a>    
+        <a href="https://docs.google.com/document/d/14c7Pohe9dIvwRvoB3WS2rZbY-Q_aPny0ikWFCeoA-jo/edit?usp=sharing">Resume</a>
+    </div>
 
 
-        <!--Breaks inserted to add space between navbar and the first heading-->
-        <br>
-        <br>
+    <!--Breaks inserted to add space between navbar and the first heading-->
+    <br>
+    <br>
 
-        <!--Background video-->
-        <div id="Home">
-            <video autoplay muted loop id="Typing_Video">
-                <source src="./img/gaming.mp4" type="video/mp4">
-                <!--Display message if video fails to run-->
-                Your browser does not support HTML5 video.
-            </video>
-        </div>
+    <!--Background video-->
+    <div id="Home">
+        <video autoplay muted loop id="Typing_Video">
+            <source src="./img/gaming.mp4" type="video/mp4">
+            <!--Display message if video fails to run-->
+            Your browser does not support HTML5 video.
+        </video>
+    </div>
 
-        <!--Video text-->
-        <div class="Video_Text">
-            <h1 class="white-text">Valter Fernandes portfolio</h1>
-            <strong>
-                <p class="center">
-                    <q>
-                        The computer programmer is a creator of universes for which he alone is the lawgiver.
-                        <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
-                        <br>field of battle and to command such unswervingly dutiful actors or troops.
-                    </q>
-                    <br> -Joseph Weizenbaum
-                    <br>
-                    <br> My name is Valter Fernandes. Welcome to my portfolio website. On it, I will tell you about my background and experience.
-                    <br>
-                    <br> Thank you for stopping by and enjoy! Check out a few of my projects below
-                </p>
-            </strong>
-        </div>
-
-        <!--Unity game section-->
-        <div class="Row" id="Unity Live Project">
-            <!--Left column-->
-            <div class="Column_2">
-                <img src="./img/TappyPlane.png" alt="Replace with your own image and description">
-            </div>
-            <!--Right column-->
-            <div class="Column_1">
-                <h1>Unity Live Project</h1>
-                <p>
-                    As part of my work with Prosper IT Consulting I got a chance to work on a two week project where I had to create an arcade game. The game I chose to go with is a clone of the popluar game Flappy Bird. I titled Tappy Plane.
-
-                    <br> During this project I got the chance to work along side other developers utilizing Agile/Scrum practices. We met for Daily stand ups and got to follow our process on Azure's Kanban board.
-                    <br>Please get out my github profile for this  <a href="https://github.com/vfernandes617/Live-Project-Unity" target="_blank">Live Unity Project.</a>
-                    <br>
-                </p>
-            </div>
-        </div>
-
-        <!--Unreal Live Project section-->
-        <div class="Row" id="Unreal">
-            <!--Left column-->
-            <div class="Column_1">
-                <h1>Unreal Live Project</h1>
-                <p>
-                    The second two week sprint I had the chance to create a sandbox game. I chose to go with creating a the popluar show Ninja warrior.
-                    <br> Be sure to check out my Unreal Project in the link below!
-                <p class="center"><a href="https://github.com/vfernandes617/Live-Project-UnrealEngine" target="_blank">Unreal Project</a></p>
-                </p>
-            </div>
-            <!--Right column-->
-            <div class="Column_2">
-                <a href="https://github.com/vfernandes617/Live-Project-UnrealEngine" target="_blank"><img src="./img/RAgdoll.gif" alt="Unreal"></a>
-            </div>
-        </div>
-
-        <!--Contact section-->
-        <div class="Row" id="Contact">
-            <!--Contact image, left column-->
-            <div class="Column_2 Column_tall">
-                <img src="./img/gaming.jpg" alt="Contact_Image">
-            </div>
-            <!--Contact form, right column-->
-            <div class="Column_1 Column_tall">
-                <h1>Contact</h1>
-                <!--This specifies where and how to send the form data; we are leaving it blank-->
-                <form action="" method="POST">
-                    <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
-                    <label>Name:</label>
-                    <input type="text" placeholder="Please enter your name here">
-                    <label>Email:</label>
-                    <input type="text" id="Email" name="Email" placeholder="Please enter your email here">
-                    <label>Message:</label>
-                    <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-                    <input type="submit" value="SUBMIT">
-                </form>
-            </div>
-        </div>
-
-        <!--Footer section-->
-        <footer>
-            <p>
-            <p class="center">&copy  2025, <a href="https://github.com/vfernandes617" target="_blank">Valter Fernandes</a></p>
-            <br>
+    <!--Video text-->
+    <div class="Video_Text">
+        <h1 class="white-text">Valter Fernandes portfolio</h1>
+        <strong>
+            <p class="center">
+                <q>
+                    The computer programmer is a creator of universes for which he alone is the lawgiver.
+                    <br>No playwright, no stage director, no emperor, however powerful, has ever exercised such absolute authority to arrange a stage or
+                    <br>field of battle and to command such unswervingly dutiful actors or troops.
+                </q>
+                <br> -Joseph Weizenbaum
+                <br>
+                <br> My name is Valter Fernandes. Welcome to my portfolio website. On it, I will tell you about my background and experience.
+                <br>
+                <br> Thank you for stopping by and enjoy! Check out a few of my projects below
             </p>
-        </footer>
-    </body>
+        </strong>
+    </div>
+
+    <!--Unity game section-->
+    <div class="Row" id="Unity Live Project">
+        <!--Left column-->
+        <div class="Column_1">
+            <a href="https://github.com/vfernandes617/Live-Project-Unity/tree/main" target="_blank"> <img src="./img/tappyplane.png" alt="Tappy Plane gif"><</a>
+</div>
+        <!--Right column-->
+        <div class="Column_1">
+            <h1>Unity Live Project</h1>
+            <p>
+                As part of my work with Prosper IT Consulting I got a chance to work on a two week project where I had to create an arcade game. The game I chose to go with is a clone of the popluar game Flappy Bird. I titled Tappy Plane.
+
+                <br> During this project I got the chance to work along side other developers utilizing Agile/Scrum practices. We met for Daily stand ups and got to follow our process on Azure's Kanban board.
+                <br>Please get out my github profile for this  <a href="https://github.com/vfernandes617/Live-Project-Unity" target="_blank">Live Unity Project.</a>
+                <br>
+            </p>
+        </div>
+    </div>
+
+    <!--Unreal Live Project section-->
+    <div class="Row" id="Unreal">
+        <!--Left column-->
+        <div class="Column_1">
+            <h1>Unreal Live Project</h1>
+            <p>
+                The second two week sprint I had the chance to create a sandbox game. I chose to go with creating a the popluar show Ninja warrior.
+                <br> Be sure to check out my Unreal Project in the link below!
+            <p class="center"><a href="https://github.com/vfernandes617/Live-Project-UnrealEngine" target="_blank">Unreal Project</a></p>
+            </p>
+        </div>
+        <!--Right column-->
+        <div class="Column_2">
+            <a href="https://github.com/vfernandes617/Live-Project-UnrealEngine" target="_blank"><img src="./img/RAgdoll.gif" alt="Unreal"></a>
+        </div>
+    </div>
+    <!--New Project-->
+    <div class="Row" id="New Project">
+        <!--Left column-->
+        <div class="Column_2">
+            <img src="./img/TappyPlane.png" alt="Replace with your own image and description">
+        </div>
+        <!--Right column-->
+        <div class="Column_1">
+            <h1>Pending Project</h1>
+            <p>
+               
+
+                <br> 
+                <br>
+                <br>
+            </p>
+        </div>
+    </div>
+
+    <!--Contact section-->
+    <!--Footer section-->
+    <footer>
+        <p>
+        <p class="center">&copy  2025, <a href="https://github.com/vfernandes617" target="_blank">Valter Fernandes</a></p>
+        <br>
+        </p>
+    </footer>
+</body>
 </html>
