new webpage update

--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
         <a class="active" href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>
-        <a onclick="openForm()" ondblclick="closeForm()" class="contact">Contact</a>
         <a href="https://www.linkedin.com/in/valterfernandes/">Linkedin</a>
+        <a href="Proficiencies.html">Proficiencies</a>
     </div>
     <!--Insert break from nav bar-->
     <br>
