--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>    
         <a href="https://docs.google.com/document/d/14c7Pohe9dIvwRvoB3WS2rZbY-Q_aPny0ikWFCeoA-jo/edit?usp=sharing">Resume</a>
+        <a href="Proficiencies.html">Proficiencies</a>
     </div>
 
 
@@ -55,8 +56,8 @@
     <!--Unity game section-->
     <div class="Row" id="Unity Live Project">
         <!--Left column-->
-        <div class="Column_1">
-            <a href="https://github.com/vfernandes617/Live-Project-Unity/tree/main" target="_blank"> <img src="./img/tappyplane.png" alt="Tappy Plane gif"><</a>
+        <div class="Column_2">
+            <a href="https://github.com/vfernandes617/Live-Project-Unity/tree/main" target="_blank"> <img src="./img/tappyplane.gif" alt="Tappy Plane gif"><</a>
 </div>
         <!--Right column-->
         <div class="Column_1">
@@ -91,12 +92,12 @@
     <div class="Row" id="New Project">
         <!--Left column-->
         <div class="Column_2">
-            <img src="./img/TappyPlane.png" alt="Replace with your own image and description">
+            <img src="./img/coming soon.jpg" alt="Replace with your own image and description">
         </div>
         <!--Right column-->
         <div class="Column_1">
             <h1>Pending Project</h1>
-            <p>
+            <p> This is an on going project I am currently working on.  The vision as it stands is to be a clone of the game Temple run.
                
 
                 <br> 
