updating Resume link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="active" href="#Home">Home</a>
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>    
-        <a href="https://docs.google.com/document/d/14c7Pohe9dIvwRvoB3WS2rZbY-Q_aPny0ikWFCeoA-jo/edit?usp=sharing">Resume</a>
+        <a href="https://docs.google.com/document/d/1bJxoTM4kBIZxFovQ6JQtJ-KMd9B27rwfKi4QP70_xQ8/edit?tab=t.0">Resume</a>
         <a href="Proficiencies.html">Proficiencies</a>
     </div>
 
