--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>    
         <a href="https://docs.google.com/document/d/1bJxoTM4kBIZxFovQ6JQtJ-KMd9B27rwfKi4QP70_xQ8/edit?tab=t.0">Resume</a>
-        <a href="proficiencies.html">Proficiencies</a>
+        <a href="proficiencies.html">Skills Page</a>
         <a href="SkillsPage.html">Skills Page</a>
     </div>
 
