--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="Column_1">
             <h1>Unity Live Project</h1>
             <p>
-                As part of my work with Prosper IT Consulting I got a chance to work on a two week project where I had to create an arcade game. The game I chose to go with is a clone of the popluar game Flappy Bird. I titled Tappy Plane.
+                As part of my work with Prosper IT Consulting I got a chance to work on a two week project where I created an arcade game. The game I chose to go with is a clone of the popular game Flappy Bird. I titled Tappy Plane.
 
-                <br> During this project I got the chance to work along side other developers utilizing Agile/Scrum practices. We met for Daily stand ups and got to follow our process on Azure's Kanban board.
+                <br>During this project, I had the opportunity to work alongside other developers, utilizing Agile/Scrum practices. We held daily stand-ups and followed our process on Azure’s Kanban board.
                 <br>Please get out my github profile for this  <a href="https://github.com/vfernandes617/Live-Project-Unity" target="_blank">Live Unity Project.</a>
                 <br>
             </p>
