--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 As part of my work with Prosper IT Consulting I got a chance to work on a two week project where I created an arcade game. The game I chose to go with is a clone of the popular game Flappy Bird. I titled Tappy Plane.
 
                 <br>During this project, I had the opportunity to work alongside other developers, utilizing Agile/Scrum practices. We held daily stand-ups and followed our process on Azure’s Kanban board.
-                <br>Please get out my github profile for this  <a href="https://github.com/vfernandes617/Live-Project-Unity" target="_blank">Live Unity Project.</a>
+                <br>
+                <br>Please check out my github profile for this  <a href="https://github.com/vfernandes617/Live-Project-Unity" target="_blank">Live Unity Project.</a>
                 <br>
             </p>
         </div>
