--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
         <div class="Column_1">
             <h1>About</h1>
             <p>
-                I am an inspired software developer. A new father of one and a boundless imagination. I always had a passion for creating games. As a child I would often make up games for me and my friends to play, whether that is make beleive pokemon or to pretending to know what the rules of Yuigioh were.
-                In my adult life we transitioned to creating games that involed drinking or make shift board games. The biggest enjoyment I would get  from this was the fun process of coming up something people would enjoy and seeing other
-                enjoy something you came up with.
+                I am an inspired software developer, a new father of one, and a dreamer with a boundless imagination. I have always had a passion for creating games. As a child, I would often invent games for my friends and me to play—whether it was make-believe Pokémon adventures or pretending we knew the rules of Yu-Gi-Oh.
+
+In adulthood, that creativity evolved into designing games for social gatherings, from drinking games to makeshift board games. My greatest joy comes from the creative process—imagining something that people will enjoy and then watching them have fun with it.
                 <br>
                 <br>I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more.
                 <br>
