--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="Column_1">
             <h1>Unreal Live Project</h1>
             <p>
-                The second two week sprint I had the chance to create a sandbox game. I chose to go with creating a the popluar show Ninja warrior.
+                The second two week sprint I had the chance to create a sandbox game. I chose to go with creating the popular show Ninja Warrior.
                 <br>
                 <br> Be sure to check out my Unreal Project in the link below!
             <p class="center"><a href="https://github.com/vfernandes617/Live-Project-UnrealEngine" target="_blank">Unreal Project</a></p>
