--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <a href="about.html">About</a>
         <a href="https://github.com/vfernandes617">GitHub</a>
         <a href="https://www.linkedin.com/in/valterfernandes/">Linkedin</a>
-        <a href="Proficiencies.html">Proficiencies</a>
+        <a href="proficiencies.html">Proficiencies</a>
     </div>
     <!--Insert break from nav bar-->
     <br>
